Added filter for index products
