# storage/api-docs/api-docs.json
@@ -216,6 +216,27 @@
                 ],
                 "summary": "Get all products",
                 "operationId": "1bfaa78d1c2c3848ab8165c5dadcad3e",
+                "parameters": [
+                    {
+                        "name": "category_id",
+                        "in": "query",
+                        "description": "Filtre par catégorie",
+                        "required": false,
+                        "schema": {
+                            "oneOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "string"
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Products retrieved successfully",
